--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,7 @@ section {
 }
 
 .contact-info p, .contact-info address {
-    margin: 20px;
+    margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
     font-style: normal;
